--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "lodash": "^4.17.21",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1",
     "morgan": "^1.10.0"
   }
 }
